--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,9 @@ body {
 }
 
 #input {
-    width:50vw;
-    height:calc(100vh - 20px);
+    width:30vw;
+    /* height:calc(100vh - 20px); */
+    height: 30vh;
     border:none;
     padding:5px;
     border:2px solid;
@@ -16,11 +17,31 @@ body {
     transition-property:border-color;
     font-size:16px;
     box-sizing:border-box;
-    margin:10px;
+    white-space:nowrap;
+}
+
+.horizontal {
+    padding: 10px;
+    display: flex;
 }
 
 #input:focus {
     border-color:black;
     transition:500ms;
     transition-property:border-color;
+}
+
+.summation {
+    background: #9AFDFC;
+    font-size: 16px;
+    display:inline-block;
+    padding-top: 1px;
+}
+
+.summation.row {
+    display:block;
+}
+
+.summation.col {
+    margin: 2px;
 }
