--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
+
 body {
     margin: 0;
-    padding: 0;
+    padding: 10px;
 }
 
 #input {
@@ -9,24 +10,22 @@ body {
     height: 30vh;
     border:none;
     padding:5px;
-    border:2px solid;
-    border-color:#d3d3d3;
-    border-radius:4px;
+    border-radius:0px;
     outline:none;
     transition:500ms;
     transition-property:border-color;
     font-size:16px;
     box-sizing:border-box;
     white-space:nowrap;
+    border: 1px solid #ccc;
 }
 
 .horizontal {
-    padding: 10px;
     display: flex;
 }
 
 #input:focus {
-    border-color:black;
+    border-color: #4800FF;
     transition:500ms;
     transition-property:border-color;
 }
@@ -40,10 +39,23 @@ body {
     padding: 2px;
 }
 
+.summation.row:first-child {
+    margin-top: 0;
+}
+
+
 .summation.row {
     display:block;
+    margin: 2px;
 }
 
 .summation.col {
     margin: 2px;
+}
+
+.summation.col:first-child {
+    margin-left: 0;
+}
+
+.summationContainer {
 }
