--- a/src/App.css
+++ b/src/App.css
@@ -59,3 +59,38 @@ body {
 
 .summationContainer {
 }
+
+.summaryTable {
+    border-collapse: collapse;
+}
+
+.summaryTable td {
+    padding: 2px;
+}
+
+.summaryTable td:first-child {
+}
+
+.summaryTable td:last-child {
+    font-weight: bold;
+    color: #4800FF;
+}
+
+.summaryTable td:nth-last-child(2) {
+    border-right: 1px solid #4800FF;
+}
+
+.summaryTable tr:last-child {
+    font-weight: bold;
+    color: #4800FF;
+}
+
+.summaryTable tr:nth-last-child(2) {
+    border-bottom: 1px solid #4800FF;
+}
+
+.summaryTable td[data-is-undefined="true"] {
+    color: #ccc;
+    font-family: Monospace;
+    font-size: 10px;
+}
